Agregados nav y aside. se usa javascript para maniplular el tamaño del main

--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=PT+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=PT+Sans&family=PT+Serif&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" type="image/jpg" href="img/logo.jpg">
-    <title>University of Oxford</title>
+    <title>Universidad de Oxford</title>
 </head>
 
 <body class="grid">
@@ -80,31 +87,119 @@
             <li><a href="http://">Guia de acceso<i></i></a></li>
             <li><a href="http://">Mapa<i></i></a></li>
         </ul>
+        <i class="flecha"></i>
     </nav>
-    <main class="section_container">
-        <section>upper section
-            <article>
-                upper article
-                <aside>upper aside</aside>
+    <main id="contenido">
+        <h2>PRINCIPAL</h2>
+        <section>
+            <article class="articulo-uno">
+                <h3 class="titulo-articulo">La Universidad de Oxford ha sido reconocida con el estatus de Universidad
+                    de Santuario</h3>
+                <p>La Universidad de Oxford y sus colegios tienen una larga historia de ser un lugar seguro, y el
+                    estatus reconoce la continua determinación e iniciativas de Oxford para ayudar a aquellos que buscan
+                    refugio, ya sean estudiantes, personal o miembros de la comunidad local.
+                </p>
+                <P>La Universidad de Oxford ha recibido el premio de "Universidad de Santuario" en reconocimiento a su
+                    compromiso sostenido de ser un lugar de acogida para personas desplazadas por la fuerza en todo el
+                    mundo. El estatus reconoce la determinación continua y las iniciativas de Oxford para ayudar a
+                    aquellos que buscan refugio, ya sean estudiantes, personal o miembros de la comunidad local.
+                </P>
+                <p>
+                    Las Universidades de Santuario conforman una red nacional que se esfuerza colectivamente por hacer
+                    que las instituciones de educación superior sean lugares de seguridad, solidaridad y empoderamiento
+                    para las personas que buscan refugio.</P>
             </article>
+            <aside class="aside-articulo aside-articulo-uno">
+                <div class="contenedor-fecha-compartir">
+                    <section class="section-fecha">
+                        <span>Publicado 11 Mayo 2023</span>
+                    </section>
+                    <div class="contenedor-compartir">
+                        <h3>Compartir esto:</h3>
+                        <a href=""><i></i></a>
+                        <a href=""><i></i></a>
+                        <a href=""><i></i></a>
+                    </div>
+                </div>
+            </aside>
         </section>
         <section>
-            inferior section
-            <article>
-                inferior article
-                <aside>inferior aside</aside>
+            <article class="articulo-dos">
+                <h3 class="titulo-articulo">Primera fusión de luz</h3>
+                <p>El modelado mostró que el proceso tenía suficiente promesa para que Hawker y su supervisor de
+                    doctorado, el profesor Yiannis Ventikos, formaran First Light Fusion en 2011. Justo más de una
+                    década después, la empresa es ahora la empresa emergente líder en fusión inercial del mundo,
+                    habiendo recaudado más de £70 millones y demostrado con éxito la fusión en noviembre de 2021.
+                </p>
+                <p>
+                    A principios de 2023, First Light Fusion anunció planes para construir una máquina que demostrará
+                    que su enfoque basado en objetivos va un paso más allá. En lugar de solo lograr la fusión, la
+                    Máquina 4 será la instalación demostradora de First Light destinada a mostrar la "ganancia". Una vez
+                    desarrollada, la Máquina 4 se convertirá en la instalación de energía pulsada más grande del mundo,
+                    creando una plataforma de ciencia completamente nueva para la investigación y el desarrollo en
+                    varios sectores del Reino Unido.
+                </p>
             </article>
+            <aside class="aside-articulo aside-articulo-dos">
+                <div class="contenedor-fecha-compartir">
+                    <section class="section-fecha">
+                        <span>Publicado 11 Mayo 2023</span>
+                    </section>
+                    <div class="contenedor-compartir">
+                        <h3>Compartir esto:</h3>
+                        <a href=""><i></i></a>
+                        <a href=""><i></i></a>
+                        <a href=""><i></i></a>
+                    </div>
+                </div>
+            </aside>
         </section>
     </main>
-    <aside id="lateral_aside">
-        lateral aside
+    <script src="js/script.js"></script>
+
+    <aside id="aside-lateral">
+        <h2>EVENTOS</h2>
+        <ul id="lista-eventos">
+            <li>
+                <span class="fecha-evento">20 Mayo</span>
+                <a href="#">
+                    <h3>Laberinto: Explorando Knossos en el Ashmolean Museum<br>
+                        <span>Museo Ashmoleano</span>
+                    </h3>
+                </a>
+            </li>
+            <li>
+                <span class="fecha-evento">20 Mayo</span>
+                <a href="#">
+                    <h3>Poesía en las galerías<br>
+                        <span>Museo Ashmoleano</span>
+                    </h3>
+                </a>
+            </li>
+            <li>
+                <span class="fecha-evento">22 Mayo</span>
+                <a>
+                    <h3>Investigación de arqueologías ambientales africanas<br>
+                        <span>Museo de los ríos Pitt</span>
+                    </h3>
+                </a>
+            </li>
+            <li>
+                <span class="fecha-evento">24 Mayo</span>
+                <a href="#">
+                    <h3>Modelo de borde GNAR: un modelo autorregresivo de red para redes con pesos de borde variables en
+                        el
+                        tiempo - Anastasia Mantziou<br>
+                        <span>Instituto para el Nuevo Pensamiento Económico (y en línea)</span>
+                    </h3>
+                </a>
+            </li>
+        </ul>
     </aside>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque fuga, eligendi molestias corporis magni quia
-        eveniet explicabo perspiciatis praesentium commodi, harum nostrum! Velit ullam itaque ipsum tempora quis nisi
-        ad?</p>
     <footer>
         footer
     </footer>
+
 </body>
 
 </html>
