--- a/index.html
+++ b/index.html
@@ -5,16 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=PT+Sans&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=PT+Sans&family=PT+Serif&display=swap"
-        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" type="image/jpg" href="img/logo.jpg">
     <title>Universidad de Oxford</title>
@@ -22,7 +12,7 @@
 
 <body class="grid">
     <header>
-        <div><img src="img/oxlogo-rect-border.svg" alt="logo de la universidad"></div>
+        <div><a href="index.html"><img src="img/oxlogo-rect-border.svg" alt="logo de la universidad"></a></div>
         <div class="contenedor_busqueda">
             <input class="busqueda" type="text" placeholder="Buscar...">
             <button class="busqueda_btn"><i class="icono_busqueda"></i></button>
@@ -43,8 +33,8 @@
             </a>
         </div>
         <div class="contenedor-enlaces-header">
-            <a href="#">Mi Oxford log-in</a>
-            <a href="">FAQ</a>
+            <a href="pages/login.html">Mi Oxford log-in</a>
+            <a href="pages/FAQ.html">FAQ</a>
         </div>
     </header>
     <nav id="nav_superior">
@@ -62,7 +52,7 @@
             <a href=""></a>
             <a href=""></a>
         </div>
-        <a href="#">NOTICIAS Y EVENTOS<i class="icon-triangulo"></i></a>
+        <a href="pages/noticias.html">NOTICIAS Y EVENTOS<i class="icon-triangulo"></i></a>
         <div>
             <a href=""></a>
             <a href=""></a>
@@ -116,9 +106,11 @@
                     </section>
                     <div class="contenedor-compartir">
                         <h3>Compartir esto:</h3>
-                        <a href=""><i></i></a>
-                        <a href=""><i></i></a>
-                        <a href=""><i></i></a>
+                        <div>
+                            <a href="https://twitter.com/oxfordalumni"><i class="icono-twitter"></i></a>
+                            <a href="https://www.facebook.com/oxfordalumni"><i class="icono-facebook"></i></a>
+                            <a href="https://co.linkedin.com/?original_referer="><i class="icono-linkedin"></i></a>
+                        </div>
                     </div>
                 </div>
             </aside>
@@ -147,16 +139,16 @@
                     </section>
                     <div class="contenedor-compartir">
                         <h3>Compartir esto:</h3>
-                        <a href=""><i></i></a>
-                        <a href=""><i></i></a>
-                        <a href=""><i></i></a>
+                        <div>
+                            <a href="https://twitter.com/oxfordalumni"><i class="icono-twitter"></i></a>
+                            <a href="https://www.facebook.com/oxfordalumni"><i class="icono-facebook"></i></a>
+                            <a href="https://co.linkedin.com/?original_referer="><i class="icono-linkedin"></i></a>
+                        </div>
                     </div>
                 </div>
             </aside>
         </section>
     </main>
-    <script src="js/script.js"></script>
-
     <aside id="aside-lateral">
         <h2>EVENTOS</h2>
         <ul id="lista-eventos">
@@ -178,7 +170,7 @@
             </li>
             <li>
                 <span class="fecha-evento">22 Mayo</span>
-                <a>
+                <a href="#">
                     <h3>Investigación de arqueologías ambientales africanas<br>
                         <span>Museo de los ríos Pitt</span>
                     </h3>
@@ -197,9 +189,51 @@
         </ul>
     </aside>
     <footer>
-        footer
+        <div class="contenedor-redes-footer">
+            <span>CONÉCTATE CON NOSOTROS</span>
+            <a href="https://www.youtube.com/user/oxford"><i class="icono-youtube-footer"></i></a>
+            <a href="https://twitter.com/oxfordalumni"><i class="icono-twitter-footer"></i></a>
+            <a href="https://www.facebook.com/oxfordalumni"><i class="icono-facebook-footer"></i></a>
+            <a href="https://co.linkedin.com/?original_referer="><i class="icono-linkedin-footer"></i></a>
+            <a href="https://www.instagram.com/oxford_uni/"><i class="icono-instagram-footer"></i></a>
+        </div>
+        <div class="contenedor-informacion informacion-sobre">
+            <span>INFORMACIÓN SOBRE</span>
+            <ul>
+                <li><a href="">Plan estratégico</a></li>
+                <li><a href="">Investigación de Oxford</a></li>
+                <li><a href="">Bibliotecas</a></li>
+                <li><a href="">Museos y colecciones</a></li>
+                <li><a href="">Glosario de Oxford</a></li>
+                <li><a href="">Privacidad de datos</a></li>
+                <li><a href="">Deporte en Oxford</a></li>
+                <li><a href="">Conferencias en Oxford</a></li>
+            </ul>
+        </div>
+        <div class="contenedor-informacion informacion-para">
+            <span>INFORMACIÓN PARA</span>
+            <ul>
+                <li><a href="">Futuros estudiantes universitarios</a></li>
+                <li><a href="">Futuros estudiantes de posgrado</a></li>
+                <li><a href="">Estudiantes actuales de Oxford</a></li>
+                <li><a href="">Personal actual de Oxford</a></li>
+                <li><a href="">Visitantes/Turistas</a></li>
+                <li><a href="">Profesores</a></li>
+                <li><a href="">Negocios/Asociaciones</a></li>
+            </ul>
+        </div>
+        <div class="contenedor-informacion enlaces-rapidos">
+            <span>ENLACES RÁPIDOS</span>
+            <ul>
+                <li><a href="">¿Alguna pregunta?</a></li>
+                <li><a href="">Empleos y vacantes</a></li>
+                <li><a href="">Fechas de termino</a></li>
+                <li><a href="">Correo electrónico de Nexus365</a></li>
+                <li><a href="">Dando a Oxford</a></li>
+            </ul>
+        </div>
     </footer>
-
+    <script src="js/script.js"></script>
 </body>
 
 </html>
