--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
         <div class="contenedor_busqueda">
             <input class="busqueda" type="text" placeholder="Buscar...">
             <button class="busqueda_btn"><i class="icono_busqueda"></i></button>
+            <script src="js/buscador.js"></script>
         </div>
         <div class="contenedor-redes">
-            <a
-                href="https://co.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2Fhttps://co.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F">
+            <a href="https://co.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2Fhttps://co.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F"
+                target="_blank">
                 <i class="linkedin-icon"></i>
             </a>
-            <a href="https://twitter.com/oxfordalumni">
+            <a href="https://twitter.com/oxfordalumni" target="_blank">
                 <i class="twitter-icon"></i>
             </a>
-            <a href="http://www.facebook.com/oxfordalumni">
+            <a href="http://www.facebook.com/oxfordalumni" target="_blank">
                 <i class="facebook-icon"></i>
             </a>
-            <a href="http://www.youtube.com/user/oxford">
+            <a href="http://www.youtube.com/user/oxford" target="_blank">
                 <i class="youtube-icon"></i>
             </a>
         </div>
@@ -38,34 +39,10 @@
         </div>
     </header>
     <nav id="nav_superior">
-        <a href="#">ADMISIONES<i class="icon-triangulo"></i></a>
-        <div>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-        </div>
-        <a href="#">INVESTIGACIÓN<i class="icon-triangulo"></i></a>
-        <div>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-        </div>
+        <a href="pages/admisiones.html">ADMISIONES<i class="icon-triangulo"></i></a>
+        <a href="pages/investigacion.html">INVESTIGACIÓN<i class="icon-triangulo"></i></a>
         <a href="pages/noticias.html">NOTICIAS Y EVENTOS<i class="icon-triangulo"></i></a>
-        <div>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-        </div>
         <a href="#">ACERCA DE<i class="icon-triangulo"></i></a>
-        <div>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-        </div>
     </nav>
     <nav id="navegador-lateral">
         <ul class="lista-navegador-lateral">
@@ -191,45 +168,46 @@
     <footer>
         <div class="contenedor-redes-footer">
             <span>CONÉCTATE CON NOSOTROS</span>
-            <a href="https://www.youtube.com/user/oxford"><i class="icono-youtube-footer"></i></a>
-            <a href="https://twitter.com/oxfordalumni"><i class="icono-twitter-footer"></i></a>
-            <a href="https://www.facebook.com/oxfordalumni"><i class="icono-facebook-footer"></i></a>
-            <a href="https://co.linkedin.com/?original_referer="><i class="icono-linkedin-footer"></i></a>
-            <a href="https://www.instagram.com/oxford_uni/"><i class="icono-instagram-footer"></i></a>
+            <a href="https://www.youtube.com/user/oxford" target="_blank"><i class="icono-youtube-footer"></i></a>
+            <a href="https://twitter.com/oxfordalumni" target="_blank"><i class="icono-twitter-footer"></i></a>
+            <a href="https://www.facebook.com/oxfordalumni" target="_blank"><i class="icono-facebook-footer"></i></a>
+            <a href="https://co.linkedin.com/?original_referer=" target="_blank"><i
+                    class="icono-linkedin-footer"></i></a>
+            <a href="https://www.instagram.com/oxford_uni/" target="_blank"><i class="icono-instagram-footer"></i></a>
         </div>
         <div class="contenedor-informacion informacion-sobre">
             <span>INFORMACIÓN SOBRE</span>
             <ul>
-                <li><a href="">Plan estratégico</a></li>
-                <li><a href="">Investigación de Oxford</a></li>
-                <li><a href="">Bibliotecas</a></li>
-                <li><a href="">Museos y colecciones</a></li>
-                <li><a href="">Glosario de Oxford</a></li>
-                <li><a href="">Privacidad de datos</a></li>
-                <li><a href="">Deporte en Oxford</a></li>
-                <li><a href="">Conferencias en Oxford</a></li>
+                <li><a href="#">Plan estratégico</a></li>
+                <li><a href="#">Investigación de Oxford</a></li>
+                <li><a href="#">Bibliotecas</a></li>
+                <li><a href="#">Museos y colecciones</a></li>
+                <li><a href="#">Glosario de Oxford</a></li>
+                <li><a href="#">Privacidad de datos</a></li>
+                <li><a href="#">Deporte en Oxford</a></li>
+                <li><a href="#">Conferencias en Oxford</a></li>
             </ul>
         </div>
         <div class="contenedor-informacion informacion-para">
             <span>INFORMACIÓN PARA</span>
             <ul>
-                <li><a href="">Futuros estudiantes universitarios</a></li>
-                <li><a href="">Futuros estudiantes de posgrado</a></li>
-                <li><a href="">Estudiantes actuales de Oxford</a></li>
-                <li><a href="">Personal actual de Oxford</a></li>
-                <li><a href="">Visitantes/Turistas</a></li>
-                <li><a href="">Profesores</a></li>
-                <li><a href="">Negocios/Asociaciones</a></li>
+                <li><a href="#">Futuros estudiantes universitarios</a></li>
+                <li><a href="#">Futuros estudiantes de posgrado</a></li>
+                <li><a href="#">Estudiantes actuales de Oxford</a></li>
+                <li><a href="#">Personal actual de Oxford</a></li>
+                <li><a href="#">Visitantes/Turistas</a></li>
+                <li><a href="#">Profesores</a></li>
+                <li><a href="#">Negocios/Asociaciones</a></li>
             </ul>
         </div>
         <div class="contenedor-informacion enlaces-rapidos">
             <span>ENLACES RÁPIDOS</span>
             <ul>
-                <li><a href="">¿Alguna pregunta?</a></li>
-                <li><a href="">Empleos y vacantes</a></li>
-                <li><a href="">Fechas de termino</a></li>
-                <li><a href="">Correo electrónico de Nexus365</a></li>
-                <li><a href="">Dando a Oxford</a></li>
+                <li><a href="#">¿Alguna pregunta?</a></li>
+                <li><a href="#">Empleos y vacantes</a></li>
+                <li><a href="#">Fechas de termino</a></li>
+                <li><a href="#">Correo electrónico de Nexus365</a></li>
+                <li><a href="#">Dando a Oxford</a></li>
             </ul>
         </div>
     </footer>
