--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -16,19 +16,22 @@
         <div class="contenedor_busqueda">
             <input class="busqueda" type="text" placeholder="Buscar...">
             <button class="busqueda_btn"><i class="icono_busqueda"></i></button>
+            <script src="../js/buscador.js"></script>
+
+
         </div>
         <div class="contenedor-redes">
-            <a
-                href="https://co.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2Fhttps://co.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F">
+            <a href="https://co.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2Fhttps://co.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F"
+                target="_blank">
                 <i class="linkedin-icon"></i>
             </a>
-            <a href="https://twitter.com/oxfordalumni">
+            <a href="https://twitter.com/oxfordalumni" target="_blank">
                 <i class="twitter-icon"></i>
             </a>
-            <a href="http://www.facebook.com/oxfordalumni">
+            <a href="http://www.facebook.com/oxfordalumni" target="_blank">
                 <i class="facebook-icon"></i>
             </a>
-            <a href="http://www.youtube.com/user/oxford">
+            <a href="http://www.youtube.com/user/oxford" target="_blank">
                 <i class="youtube-icon"></i>
             </a>
         </div>
@@ -36,10 +39,10 @@
     <nav id="navegador-lateral">
         <ul class="lista-navegador-lateral">
             <li><a href="../index.html">Inicio<i></i></a></li>
-            <li><a href="#">Programa de Posgrado UNIQ+<i></i></a></li>
-            <li><a href="#">Admisiones y divulgación de pregrado<i></i></a></li>
+            <li><a href="../pages/noticias.html">Noticias<i></i></a></li>
+            <li><a href="../pages/reconocimiento.html">Reconocimiento<i></i></a></li>
             <li><a href="#">Antiguos alumnos<i></i></a></li>
-            <li><a href="#">Información para estudiantes de Oxford<i></i></a></li>
+            <li><a href="../pages/investigacion.html">Investigación<i></i></a></li>
             <li><a href="../pages/login.html">Log in<i></i></a></li>
         </ul>
     </nav>
