--- a/pages/login.html
+++ b/pages/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/login.css">
     <link rel="icon" type="image/jpg" href="../img/logo.jpg">
-    <title>Log in / Registro</title>
+    <title>Log in | Registro</title>
 </head>
 
 <body>
